// This Source Code Form is subject to the terms of the GNU GPL-3.0 License.
// If a copy of the GPL-3.0 was not distributed with this file, You can obtain one at https://www.gnu.org/licenses/gpl-3.0.en.html.
// Copyright (C) 2022 Leszek Pomianowski.
// All Rights Reserved.

syntax = "proto3";

option csharp_namespace = "Genius.Protocol";

package Genius.Protocol;

service OAuth {
	rpc GetLoginToken(LoginTokenLookup) returns (TokenModel);

	rpc GetAccessToken(AccessTokenLookup) returns (TokenModel);

	rpc ValidateToken(TokenModel) returns (TokenResponseModel);
}

message TokenModel {
	int32 id = 1;
	string publicToken = 3;
}

message LoginTokenLookup {
	int32 userId = 1;
	string userPassword = 2;
}

message AccessTokenLookup {
	int32 userId = 1;
	string publicLoginToken = 2;
}

message TokenResponseModel {
	bool isValid = 1;
}
